1998-11-09  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* debug.h (SCM_MACROFRAME, SCM_MACROFRAMEP): New frame type.

	* eval.c (SCM_CEVAL): Mark macro frames at `handle_a_macro' so
	that we can identify these in a backtrace.  (This change doesn't
	introduce any significant speed penalty.)

	* eval.c: Added note about `serial-map' using scm_map.

	* read.c, read.h (scm_read_options, scm_read_opts): Removed
	readline options.  They should reside in their own options array.
	
	* readline.c, readline.h (scm_readline_options,
	scm_readline_opts): Moved readline options here.

1998-11-07  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* readline.c (scm_read_history, scm_write_history): Bugfix: Use
	SCM_ROCHARS instead of SCM_CHARS.

	* ports.c (scm_unread_string): Bugfixes: Check for SCM_STRINGP,
	not SCM_ROSTRINGP; use SCM_ROUCHARS instead of SCM_UCHARS.

1998-11-06  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* ports.h (SCM_CUC): #define as ~SCM_CRDY instead of 0x001fffffL.
	This is quite important since the latter clears the
	FPORT_READ_SAFE and FPORT_WRITE_SAFE flags causing flushes at
	every single character read...

1998-11-03  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* print.c (scm_iprin1): Removed suspect looking (and indeed
	malevolent) semicolon after test for user supplied closure print
	procedure.  (Thanks to Telford Tendys.)

	* list.c (scm_sloppy_memq): Removed sloppy_mem_check.
	(scm_memq, scm_memv, scm_member): Do argument checking *before*
	starting to search the list.  Removed call to sloppy_mem_check.

	* list.c, list.h (scm_delq1_x, scm_delv1_x, scm_delete1_x): New
	procedures: Same as scm_delq_x et al, but delete maximally one
	element.

	* options.c (scm_options, scm_init_options): GC-protect option
	values of type SCM.  (Thanks to Telford Tendys.)

1998-11-01  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* eval.c: Don't #define scm_lookupcar to scm_lookupcar1.  Instead
	make sure that there always is a "real" scm_lookupcar.
